--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 
             <!-- 3. 서브 사진 2: 회의실/연습실 -->
             <div style="position: relative; border-radius: 12px; overflow: hidden;">
-                <img src="로비.JPG" 
+                <img src="로비.jpg" 
                      style="width: 100%; height: 100%; object-fit: cover;" alt="회의실">
                 <div style="position: absolute; bottom: 15px; left: 15px;">
                     <div style="background: rgba(0,0,0,0.7); color: white; padding: 4px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: bold;">
@@ -2054,4 +2054,5 @@
     </div>
 
 </body>
+
 </html>
